# LORG-Release

./: .gitignore  CHANGELOG  CMakeLists.txt  LORG_License.txt  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
m4/: ax_boost_filesystem.m4  ax_boost_program_options.m4  ax_boost_regex.m4  ax_boost_system.m4  ax_boost_thread.m4
src/: Bracketing.h  CMakeLists.txt  ChartCKY.h  LorgApp.cpp  LorgApp.h  LorgParseApp.cpp  LorgParseApp.h  Makefile.am  Makefile.in  PCKYAllCell.h  PCKYBestCell.cpp  PCKYBestCell.h  ParseSolution.h  SimpleLorgParseApp.cpp  SimpleLorgParseApp.h  TagGuesser.h  TwoStageLorgParseApp.h  Word.cpp  Word.h  simple_lorgparser.cpp  twostage_lorgparser.cpp
src/classifier/: Classifier.h  FreqDist.h  NaiveBayesClassifier.h  ProbModel.h
src/edges/: AnnotationInfo.cpp  AnnotationInfo.h  BinaryTrainingTree.cpp  BinaryTrainingTree.h  Edge.cpp  Edge.h  MaxRuleProbability.h  MaxRuleProbabilityKB.h  MaxRuleProbabilityMultiple.h  PackedEdge.h  PackedEdgeDaughters.h  PackedEdgeProbability.h  TrainingNode.cpp  TrainingNode.h  ViterbiProbability.h  maxrule_functions.h
src/feature_extract/: Extract.cpp  Extract.h  ExtractApp.cpp  ExtractApp.h  Feature.cpp  Feature.h
src/grammars/: AnnotatedLabelsInfo.cpp  AnnotatedLabelsInfo.h  Grammar.cpp  Grammar.h  GrammarAnnotated.h  compact_binary_rules.cpp  compact_binary_rules.h  compact_binary_rules_annotated.cpp  compact_binary_rules_simple.cpp
src/lexicon/: ArabicIGMapping.cpp  ArabicIGMapping.h  ArabicUMapping.cpp  ArabicUMapping.h  BaselineFrenchUMapping.cpp  BaselineFrenchUMapping.h  BasicLexicon.cpp  BasicLexicon.h  BerkeleyEnglishUMapping.cpp  BerkeleyEnglishUMapping.h  BerkeleyLexicon.cpp  BerkeleyLexicon.h  EnglishIGMapping.cpp  EnglishIGMapping.h  FrenchIGMapping.cpp  FrenchIGMapping.h  ItalianIGMapping.cpp  ItalianIGMapping.h  Lexicon.cpp  Lexicon.h  LexiconFactory.cpp  LexiconFactory.h  WordSignature.h  WordSignatureFactory.cpp  WordSignatureFactory.h
src/parsers/: ParserCKY.h  ParserCKYAll.h  ParserCKYAllFactory.h  ParserCKYAllMaxVar.h  ParserCKYAllMaxVarKB.h  ParserCKYAllMaxVarMultiple.h  ParserCKYAllViterbi.h  ParserCKYBest.cpp  ParserCKYBest.h
src/rules/: AnnotatedRule.h  BRule.cpp  BRule.h  BRuleC2f.h  BRuleTraining.cpp  BRuleTraining.h  C2f.h  LexicalRule.cpp  LexicalRule.h  LexicalRuleC2f.h  LexicalRuleTraining.cpp  LexicalRuleTraining.h  MetaProduction.h  Production.cpp  Production.h  Rule.cpp  Rule.h  Types4Rules.h  URule.cpp  URule.h  URuleC2f.h  URuleTraining.cpp  URuleTraining.h
src/training/: CMakeLists.txt  EMTrainer.cpp  EMTrainer.h  LorgTrainerApp.cpp  LorgTrainerApp.h  Makefile.am  Makefile.in  TrainingGrammar.cpp  TrainingGrammar.h  Treebank.cpp  Treebank.h  TreebankFactory.h  tb2gram.cpp
src/utils/: ConfigTable.cpp  ConfigTable.h  EnglishSpec.h  LorgConstants.h  LorgOptions.h  PsTree.h  PtbPsTree.cpp  PtbPsTree.h  RandomGenerator.cpp  RandomGenerator.h  RuleVect2Map.h  SymbolTable.cpp  SymbolTable.h  Tagger.cpp  Tagger.h  Tokeniser.cpp  Tokeniser.h  TokeniserFactory.cpp  TokeniserFactory.h  TokeniserSpec.h  Tree.h
src/utils/data_parsers/: AnnotHistoriesParser.cpp  AnnotHistoriesParser.h  BURuleInputParser.cpp  BURuleInputParser.h  PTBInputParser.cpp  PTBInputParser.h  ParseError.h  RuleInputParser.cpp  RuleInputParser.h
src/utils/tree_detail/: BreadthFirstTreeIterator.h  ConstDepthFirstTreeIterator.h  ConstLeafTreeIterator.h  ConstTreeIterator.h  DepthFirstTreeIterator.h  LeafTreeIterator.h  Node.h  TreeIterator.h
test/: CMakeLists.txt  Makefile.am  Makefile.in  ParserEdgeTest.cpp  ParserInitTest.cpp  ParserRulesTest.cpp  ParserTreeTest.cpp  main.cpp
